--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-sass": "^2.2.0",
     "gulp-shell": "^0.4.2",
     "gulp-uglify": "1.x.x",
+    "gulp-uglify-es": "^2.0.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "jshint": "^2.9.2",
